[package]
name = "bevy_wave_collapse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fixed = "*"
typenum = "*"
bevy = {optional = true, version = "0.10", default-features = false}
uuid = {optional = true, version = "1.3.0"}
az = "*"
thiserror = "*"
strum = "*"
strum_macros = "*"
rand = "0.8.5"
rand_distr = "0.4.3"

[dev-dependencies]
criterion = {version = "0.4.0", features = ["html_reports"]}
hex_plugin = {path = "../hex_plugin"}

[[bench]]
name = "frac_bench"
harness = false

[features]
default = ["with_bevy"]
with_bevy = ["uuid", "bevy"]

[profile.dev.package."*"]
opt-level = 3